Formulaire de recherche multicritère fini

--- a/views/backend/loisir_add_form.html.twig
+++ b/views/backend/loisir_add_form.html.twig
@@ -59,6 +59,33 @@
                 }}) }}
             </div>
         </div>
+
+        <div class="form-group">
+            {{ form_label(loisirForm.dateDebut, null, { 'label_attr':  {
+                'class': 'col-sm-4 control-label'
+            }}) }}
+            <div class="col-sm-6">
+                {{ form_errors(loisirForm.dateDebut) }}
+                {{ form_widget(loisirForm.dateDebut, { 'attr':  {
+                    'class': 'form-control',
+                    'id': 'datepicker'
+                }}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(loisirForm.dateFin, null, { 'label_attr':  {
+                'class': 'col-sm-4 control-label'
+            }}) }}
+            <div class="col-sm-6">
+                {{ form_errors(loisirForm.dateFin) }}
+                {{ form_widget(loisirForm.dateFin, { 'attr':  {
+                    'class': 'form-control',
+                    'value': '2147483647',
+                    'id': 'to'
+                }}) }}
+            </div>
+        </div>
         <div class="form-group">
             {{ form_label(loisirForm.content, null, { 'label_attr':  {
                 'class': 'col-sm-4 control-label'
