--- a/views/frontend/_slide.html.twig
+++ b/views/frontend/_slide.html.twig
@@ -33,7 +33,7 @@
 
         <span class="custom-dropdown custom-dropdown--white">
         <select name="budget" class="custom-dropdown__select custom-dropdown__select--white">
-            <option value="0">GRATUIT</option>
+            <option value="2">GRATUIT</option>
             <option value="20">Moins de 20 €</option>
             <option value="100">Moins de 100 €</option>
             <option value="200">Moins de 200 €</option>
@@ -49,17 +49,16 @@
         <select name="Distance" class="custom-dropdown__select custom-dropdown__select--white">
             <option value="0.07">7 kms</option>
             <option value="0.2">20 kms</option>
-            <option value="0.30">30 kms</option>
             <option value="0.56">56 kms</option>
             <option value="1.10">110 kms</option>
         </select>
         </span>
 
-        <i class="fa fa-calendar fa-min ico-recherche" aria-hidden="true"></i><input type="text" id="datepicker" id="from" name="from" placeholder="Du">
-        <i class="fa fa-calendar fa-min ico-recherche" aria-hidden="true"></i><input type="text" id="to" name="to" placeholder="Au">
+        <i class="fa fa-calendar fa-min ico-recherche" aria-hidden="true"></i><input type="text" id="loisir_dateDebut" name="from" placeholder="Du">
+        <i class="fa fa-calendar fa-min ico-recherche" aria-hidden="true"></i><input type="text" id="loisir_dateFin" name="to" placeholder="Au">
 
 
-        <input id="pac-input" class="recherche" type="submit" value="Chercher" disabled>
+        <input id="pac-input" class="recherche" type="submit" value="Chercher">
     </form>
 </div>
 
