--- a/views/backend/loisir_add_form.html.twig
+++ b/views/backend/loisir_add_form.html.twig
@@ -36,6 +36,7 @@
                 }}) }}
             </div>
         </div>
+        <span  id="position"></span>
         <div class="form-group">
             {{ form_label(loisirForm.image, null, { 'label_attr':  {
                 'class': 'col-sm-4 control-label'
@@ -100,9 +101,16 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-3">
-                <input type="submit" class="btn btn-primary" value="Save"/>
+                <input type="submit" id="pac-input" class="btn btn-primary" value="Save"/>
             </div>
         </div>
     </div>
+    <div id="map"></div>
 {% endif %}
+
+    <script src="http://localhost/parcour-5/web/js/ajax.js"></script>
+    <script src="http://localhost/parcour-5/web/js/geocode.js"></script>
+    <script type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&libraries=places&callback=initAutocomplete&"
+            async defer></script>
 {% endblock %}
