--- a/views/frontend/geoloc.html.twig
+++ b/views/frontend/geoloc.html.twig
@@ -3,7 +3,10 @@
 
 {% block content %}
 
-    <div id="map"></div>
+    <div id="mapInfo">
+        <div id="map"></div>
+        <div id="infoLoisirs">essai</div>
+    </div>
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="http://localhost/parcour-5/web/js/ajax.js"></script>
