--- a/views/frontend/result.html.twig
+++ b/views/frontend/result.html.twig
@@ -1,16 +1,24 @@
 {% extends "/layout.html.twig" %}
 
 {% block content %}
-    <div class="title-show">
 
         {% for loisirs in loisir %}
 
-            {{ loisirs.title }} Distance en mètres {{ loisirs.distance }}<br />
 
+            <div class="liste-resultat">
+                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}">
+                    <img class="promo-acceuil" src="{{ loisirs.image }}">
+                </a>
 
+                <P>{{ loisirs.title }} <br /> {{ loisirs.content }}</P>
+                <p>Distance {{ loisirs.distance }} Mètres</p>
+                <a class="articleTitle" href="{{ path('sejours/', { 'id': loisirs.id }) }}?positionL={{ loisirs.positionLat }}&positionN={{ loisirs.positionLng }}#map"><P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> Plans</P>
+                    <P class="prix">{{ loisirs.prix|replace({0: "GRATUIT"}) }}</P>
+                </a>
+            </div>
 
         {% endfor %}
-    </div>
+
 
     <div id="mapInfo">
         <div id="map"></div>
