--- a/views/map/clusters.html.twig
+++ b/views/map/clusters.html.twig
@@ -1,6 +1,6 @@
 [
 {% for loisir in loisirs %}
 
-    {"number":{{ loisir.id }},"name":"{{ loisir.title }}","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":{{ loisir.position|slice(0, 8) }} , "lng":{{ loisir.position|slice(9, 8) }}},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000},
+    {"number":{{ loisir.id }},"name":"{{ loisir.title }}","address":"{{ loisir.position }}","position":{"lat":{{ loisir.positionLAT }} , "lng":{{ loisir.positionLNG }}},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000},
 {% endfor %}
 {"number":31705,"name":"31705 - CHAMPEAUX (BAGNOLET)","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":48.8645278209514,"lng":2.416170724425901},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":46,"available_bikes":4,"last_update":1511264149000}]
