--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -3,29 +3,32 @@
 
 {% block content %}
     {{ include('frontend/_slide.html.twig') }}
-    {% for loisir in loisirs %}
+    <div id="main">
+        <div class="display"><h1> BON PLANS </h1> <P><a href="http://parcour-5/geoloc" TITLE="Liste des loisirs"> VOIR TOUT <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i> </a></P> </div>
 
-        <div class="liste-main shadow-none">
-            <a class="articleTitle"
-               href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
-                <img class="liste-main" src="http://localhost/parcour-5/web/images/{{ loisir.image }}">
-                <h2><a class="loisirTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}">{{ loisir.title }}</a>
-                    <span class="type">{{ loisir.categorie|upper }}</span></h2>
-                <p>{{ loisir.content[:178] }}... </p>
-                <div class="display">
-                    <P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> {{ loisir.position }}
-                    </P>
-                    <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }}</P>
-                </div>
-                <a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
-                    <p class="reserver">Plus d'info</p></a>
-            </a>
-        </div>
+        {% for loisir in loisirs %}
 
-    {% endfor %}
+            <div class="liste-main shadow-none">
+                <a class="articleTitle"
+                   href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
+                    <img class="liste-main" src="http://localhost/parcour-5/web/images/{{ loisir.image }}">
+                    <h2><a class="loisirTitle" href="{{ path('sejours/', { 'id': loisir.id }) }}">{{ loisir.title }}</a>
+                        <span class="type">{{ loisir.categorie|upper }}</span></h2>
+                    <p>{{ loisir.content[:178] }}... </p>
+                    <div class="display">
+                        <P class="fa-min"><i class="fa fa-map-marker fa-min" aria-hidden="true"></i> {{ loisir.position }}
+                        </P>
+                        <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }}</P>
+                    </div>
+                    <a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}">
+                        <p class="reserver">Plus d'info</p></a>
+                </a>
+            </div>
 
-    {% set page, pageSuivant = 6, 12 %}
-    <a href="?page={{ page }}&pageSuivant={{ pageSuivant }}&#main" class="suivant">Page suivante >> </a>
+        {% endfor %}
+
+        {% set page, pageSuivant = 6, 12 %}
+        <a href="?page={{ page }}&pageSuivant={{ pageSuivant }}&#main" class="suivant">Page suivante >> </a>
 
     </div>
     <div class="liste-resultat">
