--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -45,9 +45,10 @@
 
     <section id="footer">
         <div class="texte-footer"><h2>Remerciement</h2><p>Site web réaliser avec l'aide <a href="https://openclassrooms.com/referral/lamlaam" class="white" title="Formation de professionnelle en ligne"> d'OpenClassrooms </a></p> <p> Grâce à OpenClassroom j'ai pu réaliser mon rêve, de devenir développeur d'applications web.</p> </div>
-        <div class="texte-footer"><h2>Mon footer 11</h2> <p> Mon texte presentation</p> <p> <a href="" class="white">suivre le lien <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
-        <div class="texte-footer"><h2>Mon footer 11</h2> <p> Mon texte presentation</p> <p> <a href="" class="white">suivre le lien <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
-        <div class="texte-footer"><h2>Lien sociaux </h2>
+        <div class="texte-footer"><h2>Professionnels</h2>  <p> <a href="" class="white">Affiliation<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> <p> <a href="" class="white">Partenaires<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+        <div class="texte-footer"><h2>En savoir plus </h2> <p></p> <p> <a href="" class="white">Qui sommes-nous ? <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+
+        <div class="texte-footer"><h2>Suivez nous </h2>
             <p>
                 <a href="https://twitter.com/lamridjamal_off"><i class="fa fa-twitter fa-moyen white" title="Twitter"></i></a>
                 <a href="https://www.linkedin.com/in/djamal-lamri-5111a8128/"><i class="fa fa-linkedin fa-moyen white" title="LinkedIn"></i></a>
