--- a/views/backend/loisir_add_form.html.twig
+++ b/views/backend/loisir_add_form.html.twig
@@ -70,25 +70,16 @@
             {{ form_label(loisirForm.image, null, { 'label_attr':  {
                 'class': 'col-sm-4 control-label'
             }}) }}
-            <div class="col-sm-6">
-                {{ form_errors(loisirForm.image) }}
-                {{ form_widget(loisirForm.image, { 'attr':  {
-                    'class': 'btn btn-primary'
-                }}) }}
+
+            <div class="col-sm-6"><img src="http://localhost/parcour-5/web/images/{{ loisir.image }}" alt="{{ loisir.title }}"><br />
+                <div class="fileUpload btn btn-primary">
+                    <span>Upload</span>
+                    <input  name="loisir[image]"  type="file" class="upload" />
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            {{ form_label(loisirForm.imageModif, null, { 'label_attr':  {
-                'class': 'col-sm-4 control-label'
-            }}) }}
-            <div class="col-sm-6">
-                {{ form_errors(loisirForm.imageModif) }}
-                {{ form_widget(loisirForm.imageModif, { 'attr':  {
-                    'class': 'btn btn-primary'
-                }}) }}
-            </div>
-        </div>
+
 
         <div class="form-group">
             {{ form_label(loisirForm.lien, null, { 'label_attr':  {
