supression de bugs

--- a/views/frontend/_search.html.twig
+++ b/views/frontend/_search.html.twig
@@ -4,8 +4,7 @@
     <span class="fa fa-bicycle fa-min fa-cat" title="loisirs"></span><span class="sous-cat"><a href="/liste/?cat=1" title="enfants"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-bebe.jpg"></a> <a href="/liste/?cat=2" title="toutes la famille"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-famille.jpg"></a> <a href="/liste/?cat=3" title="senior"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/cat-loisir-ager.jpg"></a>  </span>
     <i class="fa fa-map-o fa-min fa-cat" title="Plans"></i> <span class="sous-cat-plans">
         <a href="geoloc" title="Me localiser"><div class="img-sous-menu geoloc"><span class="title-cat">Me localiser</span> </div></a>
-        <a href="/result/0?loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314&budget=20&Distance=0.20" title="Normandie"><div class="img-sous-menu geoloc"><span class="title-cat">Normandie</span> </div></a>
-        <a href="/result/?budget=2&depart=Normandie%2C+France&loisir%5BpositionLat%5D=48.87987039999999&loisir%5BpositionLng%5D=0.17125290000001314&loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314&Distance=0.2&from=&to=" title="PLANS"><img class="img-sous-menu" src="http://localhost/parcour-5/web/images/carte-normandie-anne-olivia-messana-clio-de-fregon-1000.jpg" alt="Normandie"></a>
+        <a href="/ville/?loisirpositionLat=48.87987039999999&loisirpositionLng=0.17125290000001314" title="Normandie"><div class="img-sous-menu geoloc"><span class="title-cat">Normandie</span> </div></a>
     </span>
     <i class="fa fa-map-signs fa-min fa-cat" title="circuit. Voyage avec guide"></i> <i class="fa fa-cutlery fa-min fa-cat" aria-hidden="true" title="Restaurant, fast food et epiceries"></i> <i class="fa fa-bed fa-min fa-cat" aria-hidden="true" title="hôtel, gîte et camping"></i> </p>
 
