--- a/views/backend/admin.html.twig
+++ b/views/backend/admin.html.twig
@@ -143,8 +143,8 @@
                                 </td>
                                 <td>
                                     <a href="{{ path('admin_user_edit', { 'id': user.id }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
-                                    <button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#userDialog{{ user.id }}"><span class="glyphicon glyphicon-remove"></span>
-                                    </button>
+                                    <a href="/admin/user/{{ user.id }}/delete">dd</a>
+
                                     <div class="modal fade" id="userDialog {{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                         <div class="modal-dialog">
                                             <div class="modal-content">
